feat(core): Distributed Data Collection of Experienced Plans (#4611)
* Start adding regression tests for scoring

* Fix ordering of message processing and doSimStep in SingleExecutor, as the simulation time is not properly updated for SimTasks, before they are executed.

* Add regression tests for scoring, before working on distributed scoring

* Add input for regression test

* WIP: Wire up backback scoring collector

* WIP: Wire up backback scoring collector

* Remove warnings

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Improve DistributedEventHandler annotation:
 * Replace flags with enums
 * Change naming
 * Add more documentation

Write first Test for DistributedEventsManager, which tests various DistributedEventHandler types.

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Refactor DistributedEventsManager to improve handling of `DistributedEventHandler` types and add support for direct processing mode.

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Add additional addHandler method to manually register event handlers per partition

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Replicate what EventsToLegs, EventsToActivities does. (PT is missing)

Signed-off-by: Janek Laudan <laudan@simunto.com>

* First idea to get more information on passengers leaving and entering pt

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Revert additional event, figure out line and route information of transit vehicles directly in the scoring collector

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Add experienced transit routes
* Test cases not complete

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Simplify transit route distance calculation, as I could not parse the logic directly.

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Test experienced pt route

Signed-off-by: Janek Laudan <laudan@simunto.com>

* Introduce EndOfDayScoring which scores agents when they arrive at their final destination.

Add test cases for ScoringDataColle